--- a/lesson-8/css/fonts.css
+++ b/lesson-8/css/fonts.css
@@ -1,12 +1,56 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap');
-
-
 @import url('https://fonts.googleapis.com/css2?family=Pacifico&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Elsie+Swash+Caps:wght@400;900&display=swap');
+@font-face {
+    font-family: 'Causten';
+    src: url("../fonts/Causten-Light.woff2") format('woff2'),
+    url("../fonts/Causten-Light.woff") format('woff');
+    font-weight: 300;
+    font-display: swap;
+    font-style: normal;
+}
 
-@import url('https://fonts.googleapis.com/css2?family=Leckerli+One&display=swap');
+@font-face {
+    font-family: 'Causten';
+    src: url('../fonts/Causten-Regular-1.woff2') format('woff2'),
+    url('../fonts/Causten-Regular-1.woff') format('woff');
+    font-weight: 400;
+    font-display: swap;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Causten';
+    src: url('../fonts/Causten-Bold-1.woff2') format('woff2'),
+    url('../fonts/Causten-Bold-1.woff') format('woff');
+    font-weight: 700;
+    font-display: swap;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Core Sans C';
+    src: url("../fonts/CoreSansC-65Bold.woff2") format('woff2'),
+    url("../fonts/CoreSansC-65Bold.woff") format('woff');
+    font-weight: 600;
+    font-display: swap;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Core Sans C';
+    src: url("../fonts/CoreSansC-85Heavy.woff2") format('woff2'),
+    url("../fonts/CoreSansC-85Heavy.woff") format('woff');
+    font-weight: 800;
+    font-display: swap;
+    font-style: normal;
+}
+
+
+
+
+
 
 
 
