--- a/lesson-8/css/style.css
+++ b/lesson-8/css/style.css
@@ -269,7 +269,8 @@ h1 {
     margin-bottom: 24px;
 }
 
-.image-list h4 {
+.image-list a {
+    display: inline-block;
     color: #37393F;
     font-family: Poppins, sans-serif;
     font-size: 20px;
