--- a/lesson-8/css/style.css
+++ b/lesson-8/css/style.css
@@ -314,7 +314,7 @@ h1 {
     background: #013d3a url("../img/with-women.png") 50%/cover no-repeat;
 }
 
-.image-fives .image {
+.image-fifth .image {
     background: #013d3a url("../img/with-list.png") 50%/cover no-repeat;
 }
 
