--- a/lesson-9/css/style.css
+++ b/lesson-9/css/style.css
@@ -180,7 +180,7 @@ h6 {
 
 .ntn {
     border: 1px solid darkgray;
-    background-color: #f1dfc2;
+    background-color: #f5f3f1;
 }
 
 .type :not(span) {
