--- a/lesson-9/css/style.css
+++ b/lesson-9/css/style.css
@@ -463,6 +463,7 @@ h6 {
     color: #7D7D7D;
     font-size: 18px;
     line-height: 1.46;
+    padding-left: 50px;
 }
 
 /* whitecollar button part */
