--- a/lesson-10/css/style.css
+++ b/lesson-10/css/style.css
@@ -3,8 +3,8 @@
 
 /* Скидання стилів */
 @import url("reset.css");
-
 /* Загальні стилі */
+
 body {
     color: #e7e7e7;
     font-family: MonteCarlo, fantasy;
@@ -12,9 +12,13 @@ body {
     background: url("../img/body-full.webp") 10% 100%/contain repeat;
 }
 
-.header-title {
-    padding: 10px;
+header {
     margin-bottom: 40px;
+}
+
+.header-title,
+.footer-title {
+    padding: 10px;
     background-color: rgba(66, 65, 65, 0.37);
 }
 
@@ -33,14 +37,10 @@ main {
     color: black;
     background-color: rgba(175, 174, 174, 0.93);
     border: double #f6f3f3 4px;
-    border-radius: 10px;
+    border-radius: 13px;
     padding: 15px 0;
     max-width: 1000px;
-    margin: 0 auto;
-}
-
-main:not(:last-child) {
-    margin-bottom: 40px;
+    margin: 0 auto 40px;
 }
 
 .vector-icon-block,
@@ -48,7 +48,7 @@ main:not(:last-child) {
 .raster-content-block {
     padding: 15px;
     text-align: center;
-    border-bottom: 4px double #f6f4f4;
+    border-bottom: 4px double #e0e0e0;
 }
 
 .vector-icon-block h2,
@@ -85,8 +85,4 @@ main:not(:last-child) {
     text-shadow: 1px 1px #414040;
 }
 
-.footer-title {
-    padding: 10px;
-    background-color: rgba(66, 65, 65, 0.37);
-}
 
