--- a/lesson-15/css/fonts.css
+++ b/lesson-15/css/fonts.css
@@ -16,3 +16,21 @@
     font-display: swap;
     font-style: normal;
 }
+
+@font-face {
+    font-family: 'Causten';
+    src: url("../fonts/Causten-Bold.woff2") format("woff2"),
+    url("../fonts/Causten-Bold.woff") format("woff");
+    font-weight: 700;
+    font-display: swap;
+    font-style: normal;
+}
+
+@font-face {
+    font-family: 'Core Sans C';
+    src: url("../fonts/CoreSansC-65Bold.woff2") format("woff2"),
+    url("../fonts/CoreSansC-65Bold.woff") format("woff");
+    font-weight: 700;
+    font-display: swap;
+    font-style: normal;
+}
