--- a/lesson-15/css/style.css
+++ b/lesson-15/css/style.css
@@ -6,13 +6,13 @@
 
 /* Загальні стилі */
 body {
-    /*font-family: ;*/
+    font-family: Causten, sans-serif;
     font-size: 18px;
     line-height: 1.2;
 }
 
 [class*="__container"] {
-    max-width: 1309px;
+    max-width: 1270px;
     padding: 0 15px;
     margin: 0 auto;
 }
@@ -31,38 +31,29 @@ body {
     /*top: 0;*/
     /*left: 0;*/
     padding: 34px 0 31px;
-    font-family: Causten, sans-serif;
-    min-height: 111px;
 }
 
 .header__container {
     margin-bottom: 80px;
-    /*flex: 0 0 1240px;*/
-
     display: flex;
     justify-content: space-between;
     align-items: center;
-    flex-wrap: nowrap;
-    /*gap: ; !* ???? *!*/
-
+    flex-wrap: wrap;
 }
 
 .header__navigation {
     display: flex;
     justify-content: space-between;
+    /*flex: 0 0 880px;*/
+     gap: 187px;
     align-items: center;
 }
 
 .header__logo {
-    margin-right: 164px;
-}
-
-.logo {
-    display: flex;
+    display: inline-block;
 }
 
 .logo__item {
-    flex: 0 0 92px;
 }
 
 .header__search {
@@ -71,15 +62,15 @@ body {
     border-radius: 8px;
     background: #F6F6F6;
     padding: 12px 48px;
-    margin-right: 181px;
 }
 
 .search {
 }
 
 .search__item {
+    display: flex;
+    gap: 12px;
     color: #807D7E;
-    text-align: center;
     font-weight: 500;
 }
 
@@ -88,19 +79,26 @@ body {
     display: inline-block;
     width: 20px;
     height: 20px;
-    gap: 19px;
     background: url("../img/icons/search.svg") 0 50% no-repeat;
 }
 
-.menu-language {
-    flex-direction: column;
+/*------------------ language---------------------- */
+
+.header__menu {
     position: relative;
 }
 
-.menu-language__item {
+.menu-language__list {
+    position: absolute;
+    left: 0;
+    top: 100%;
+    padding-top: 15px;
+    width: 233px;
+    visibility: hidden;
 }
 
-.menu-language__item:hover .sub-language-menu {
+.header__menu:hover .menu-language__list {
+    border-radius: 5px;
     border: 1px solid black;
     visibility: visible;
 }
@@ -109,54 +107,45 @@ body {
     color: #333;
 }
 
-.menu-language__link--after {
+.menu-language__default--after {
+    display: inline-flex;
+    align-items: center;
+    gap: 19px;
 }
 
-.menu-language__link--after::after {
+.menu-language__default--after::after {
     content: '';
-    display: inline-block;
     width: 10px;
     height: 5px;
-    margin-left: 20px;
     background: url("../img/icons/down-arrow.svg") 0 50% no-repeat;
 }
 
-.sub-language-menu {
-    position: absolute;
-    left: 0;
-    top: 100%;
-    padding-top: 13px;
-    width: 233px;
-    visibility: hidden;
-}
-
-.sub-language-menu__item:not(:last-child) {
+.menu-language__item:not(:last-child) {
     margin-bottom: 12px;
 }
 
-.sub-language-menu__item:hover {
+.menu-language__item:hover {
     text-decoration: underline;
 }
 
-.sub-language-menu__link {
-}
-
+/*------------------ form----------------------- */
 .header__form {
     display: flex;
     align-items: center;
 }
 
 .form {
-    display: inline-flex;
-    padding: 12px 48px;
+    display: flex;
     justify-content: center;
     align-items: center;
-    gap: 12px;
+    gap: 29px;
     flex-wrap: nowrap;
     text-transform: capitalize;
 }
 
 .form__button-link {
+    transition: all 0.4s ease;
+    /*transition: margin-right 2s, color 1s;*/
     padding: 12px 48px;
     border-radius: 8px;
     text-align: center;
@@ -165,7 +154,14 @@ body {
     color: #8A33FD;
 }
 
+.form__button-link--color {
+    border-radius: 8px;
+    background: #8A33FD;
+    color: #FFF;
+}
+
 .form__button-link:hover {
+    transition: all 0.4s ease;
     border-radius: 8px;
     background: #8A33FD;
     color: #FFF;
@@ -173,99 +169,395 @@ body {
     font-weight: 500;
 }
 
-.form__button-link:not(:last-child) {
-    margin-right: 29px;
+.form__button-link--color:hover,
+.form__button-link:hover {
+    background: #6324b6;
 }
 
 /* ------------------------Categories for man--------------------- */
-.page {
-
+.page__categories {
+    margin-bottom: 90px;
 }
 
-.page__container {
-    /*display: inline-flex;*/
-    /*flex: 1 1 1054px;*/
-    /*flex-direction: column;*/
-    /*justify-content: center;*/
-    /*align-items: flex-start;*/
-    /*gap: 70px;*/
+.categories__title:not(:last-child) {
+    margin-bottom: 70px;
 }
 
-.categories {
+.categories__title h2 {
+    color: #3C4242;
+    font-family: 'Core Sans C', sans-serif;
+    font-size: 34px;
+    font-weight: 600;
+    letter-spacing: 0.68px;
 }
 
-.categories__title {
+.categories__title h2::before {
+    content: '';
+    display: inline-block;
+    width: 6px;
+    height: 30px;
+    border-radius: 10px;
+    background: #8A33FD;
+    margin-right: 14px;
 }
 
 .categories__column {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 50px;
 }
 
 .column {
 }
 
 .column__item {
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
 }
 
+
 .item {
+
 }
 
 .item__image {
+    height: 100%;
+    width: 100%;
 }
 
+.item__link-product {
+    display: inline-block;
+    max-height: 394px;
+}
+
+.item__product {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-shrink: 1;
+    gap: 10px;
+}
+
+.product__info {
+    display: flex;
+    flex-direction: column;
+    flex-shrink: 1;
+    /*gap: 8px;*/
+}
+
+.product__title {
+    color: #2A2F2F;
+    font-family: Causten, sans-serif;
+    font-weight: 700;
+    line-height: 1.5;
+    letter-spacing: -0.715px;
+    text-transform: capitalize;
+}
+
+.product__info p {
+    color: #7F7F7F;
+    font-family: Causten, sans-serif;
+    font-size: 14px;
+    font-weight: 500;
+    line-height: 1.9;
+    letter-spacing: -0.536px;
+}
+
+.product__side-link {
+    display: flex;
+    align-items: flex-start;
+
+}
+
+.product__side-link::after {
+    content: '';
+    display: inline-block;
+    width: 18px;
+    height: 14px;
+    background: url("../img/icons/side-arrow.svg") 0 50% no-repeat;
+}
+
+/*-------------------Wishlist--------------------- */
+
+.page__wishlist {
+    margin-bottom: 110px;
+}
+
+.wishlist {
+}
+
+.wishlist__container {
+    max-width: 933px;
+}
+
+.wishlist__title {
+    color: #3C4242;
+    font-family: 'Core Sans C', sans-serif;
+    font-size: 28px;
+    font-weight: 600;
+    letter-spacing: 0.56px;
+    margin-bottom: 52px;
+}
+
+.wishlist__list {
+}
+
+.wishlist__item {
+    display: flex;
+    justify-content: space-between;
+    flex: 0 1 auto;
+    gap: 36px;
+    align-items: center;
+    margin-bottom: 60px;
+    padding-bottom: 30px;
+    border-bottom: 1px solid #edeef2;
+}
+
+.card {
+
+}
+
+.card__cancel::before {
+    content: '';
+    display: inline-block;
+    width: 22px;
+    height: 22px;
+    background: url("../img/icons/close-cross.svg") 0 50% no-repeat;
+}
+
+.card__product-link {
+    transition: all 0.4s ease;
+    display: inline-block;
+}
+
+.card__product-link:hover {
+    transition: all 0.4s ease;
+    outline: 1px solid #6f2ebd;
+    border-radius: 4px;
+}
+
+.card__image-product {
+    width: 110px;
+    height: 110px;
+}
+
+.card__image-product img {
+    width: 100%;
+    height: 100%;
+}
+
+.card__about-product {
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    gap: 12px;
+    font-size: 22px;
+    letter-spacing: 0.44px;
+}
+
+.product {
+}
+
+.product__link {
+    color: #3C4242;
+    font-family: Causten, sans-serif;
+    display: inline-block;
+    text-transform: capitalize;
+    font-size: 22px;
+    line-height: 1.2;
+    letter-spacing: 0.44px;
+    font-weight: 700;
+}
+
+.product p {
+    color: #3C4242;
+    font-weight: 700;
+}
+
+.product span {
+    color: #807D7E;
+    font-weight: 500;
+}
+
+.card__price {
+    color: #807D7E;
+    font-weight: 700;
+    font-size: 22px;
+    letter-spacing: 0.44px;
+}
+
+.card__add-link {
+    flex-shrink: 0;
+    padding: 14px 28px;
+    border-radius: 8px;
+    background: #8A33FD;
+    color: #FFF;
+    text-align: center;
+    font-weight: 500;
+}
+
+.card__add-link:hover {
+    background: #5f1db7;
+}
+
+/*----------------Orders-------------------------*/
+.page__orders {
+    margin-bottom: 50px;
+}
+
+.orders {
+}
+
+.orders__container {
+    max-width: 925px;
+}
+
+.orders__list {
+}
+
+.list__item {
+    padding-bottom: 30px;
+    border-bottom: 1px solid #edeef2;
+}
+
+.list__item:not(:last-child) {
+    margin-bottom: 30px;
+}
+
+.order-product {
+    border-radius: 8px;
+    background: #F6F6F6;
+    padding: 28px 47px;
+
+    display: flex;
+    flex-direction: column;
+    row-gap: 14px;
+}
+
+.order-product__title {
+    color: #3C4242;
+    font-size: 20px;
+    font-weight: 600;
+}
+
+.order-product__info {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 20px;
+}
+
+.list {
+}
+
+.info {
+}
+
+.info__date {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 7px;
+}
+
+.info__status {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 7px;
+}
+
+.info__date p,
+.info__status p {
+    color: #807D7E;
+    font-size: 14px;
+    font-weight: 600;
+    text-transform: capitalize;
+}
+
+.info__date span,
+.info__status span {
+    color: #BEBCBD;
+    font-size: 14px;
+    text-transform: capitalize;
+}
+
+.about-product {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    column-gap: 15px;
+}
+
+.about-product__info {
+    flex-grow: 1;
+
+}
+
+.about-product__image {
+    width: 96px;
+    height: 96px;
+}
+
+.about-product__image img {
+    width: 100%;
+    height: 100%;
+}
+
+.about-product__info {
+
+}
+
+.about-product__title {
+    color: #3C4242;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.about-product__info p {
+    color: #3C4242;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.about-product__info span {
+    color: #BEBCBD;
+    font-size: 14px;
+    font-weight: 600;
+}
+
+.about-product__link {
+    transition: all 0.4s ease;
+    display: inline-block;
+    border-radius: 8px;
+    background: #8A33FD;
+    padding: 14px 28px;
+    color: #FFF;
+    font-family: Causten, sans-serif;
+    font-size: 18px;
+    font-weight: 500;
+    line-height: 1.2;
+}
+
+.about-product__link:hover {
+    transition: all 0.4s ease;
+    background: #6324b6;
+}
+
+/* ------------------Footer----------------------- */
 .footer {
 }
 
-
-
-
-
-
-
-
-
-
-
-/*---------------------------------------- */
-.page {
-    padding: 30px 20px;
-}
-
-.block {
-    background-color: plum;
-    border: 4px solid #262626;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: flex-start;
-    align-items: stretch;
-    /*flex-direction: column;*/
-
-    /*height: 300px;*/
-
-    /*gap: 30px;*/
-    column-gap: 30px;
-    row-gap: 45px;
-    /*align-self: stretch;*/
-}
-
-.block__item:nth-child(1) {
-    align-self: flex-start;
-}
-
-.block__item:nth-child(2) {
-    /* */
-    flex-shrink: 0;
-}
-
-.block__item {
-    background-color: deepskyblue;
-    padding: 10px;
+.footer__title {
     text-align: center;
-    font-size: 30px;
-    border: 3px solid #f6f6f6;
+    color: #565555;
+    font-weight: 700;
+    line-height: 1.5;
 }
 
-
-/* ----------------------------------------- */
 
 
 
